# shift_maker

./: .gitignore  README.md  chkconnection.py  make_shifttable.py  model.yaml  pyproject.toml  read_data.py  requirements.txt  schedule.yaml  sheet_structure.yaml  test.ipynb
doc/: GoogleAPI.md  GoogleForm.md  model.md
template/: test_schedule.yaml
